Moved app css to appropriate place

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
             name="description"
             content="React Boilerplate bundled with parcel."
         />
+        <link rel="stylesheet" href="./App.css" type="text/css" />
         <title>React Boilerplate</title>
     </head>
     <body>
