--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,9 @@
         <link rel="icon" href="assets/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta
-            name="description"
-            content="React Boilerplate bundled with parcel."
-        />
+        <meta name="description" content="Video game content and news." />
         <link rel="stylesheet" href="./App.css" type="text/css" />
-        <title>React Boilerplate</title>
+        <title>Video Games Central</title>
     </head>
     <body>
         <div id="app"></div>
